1. CSS alignment fix for Strategy component

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,19 @@
     color: white;
 }
 
+.each-turn {
+    width: 10px;
+    display: inline-block;
+    padding: 4px 30px;
+}
+
+.turn-value {
+    text-align: start;
+    padding-left: 25px;
+    color: #8482ee;
+    font-weight: bold;
+}
+
 /** Common Styles */
 
 .display-inline-block {
